refactor CMake configuration to conditionally include testing options and targets

--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -16,7 +16,7 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Compile code
-        run: make test_frame_ops
+        run: mkdir build && cd build && cmake .. && make
 
       - name: Test Frame Operations
-        run: ./bin/test_frame_ops
+        run: ./build/test_frame_ops
