--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,8 +1,12 @@
 cmake_minimum_required(VERSION 3.8)
 project(botspeak)
 
-find_package(PkgConfig REQUIRED)
-pkg_check_modules(Serial REQUIRED IMPORTED_TARGET libserial)
+option(TESTING "Build the test_real_world executable" OFF)
+
+if(TESTING)
+  find_package(PkgConfig REQUIRED)
+  pkg_check_modules(Serial REQUIRED IMPORTED_TARGET libserial)
+endif()
 
 add_library(botspeak SHARED
   src/bot_speak_frame_ops.c
@@ -18,10 +22,12 @@ add_executable(test_frame_ops
 )
 target_link_libraries(test_frame_ops botspeak)
 
-add_executable(test_real_world
-  test/test_real_world.cpp
-)
-target_link_libraries(test_real_world botspeak PkgConfig::Serial)
+if(TESTING)
+  add_executable(test_real_world
+    test/test_real_world.cpp
+  )
+  target_link_libraries(test_real_world botspeak PkgConfig::Serial)
+endif()
 
 install(TARGETS
   botspeak
@@ -31,9 +37,15 @@ install(TARGETS
 
 install(TARGETS
     test_frame_ops
-    test_real_world
     RUNTIME DESTINATION bin
 )
+
+if(TESTING)
+  install(TARGETS
+      test_real_world
+      RUNTIME DESTINATION bin
+  )
+endif()
 
 install(DIRECTORY
   include/
