add little endian support

--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -20,3 +20,6 @@ jobs:
 
       - name: Test Frame Operations
         run: ./build/test_frame_ops
+
+      - name: Test Big-Endian Frame Operations
+        run: ./build/test_frame_ops_be
