--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -14,6 +14,23 @@ target_include_directories(botspeak PUBLIC
   $<INSTALL_INTERFACE:${CMAKE_INSTALL_INCLUDEDIR}>
 )
 
+add_library(botspeak_be
+  src/bot_speak_frame_ops_be.c
+)
+
+target_include_directories(botspeak_be PUBLIC
+  $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>
+  $<INSTALL_INTERFACE:${CMAKE_INSTALL_INCLUDEDIR}>
+)
+
+include(GNUInstallDirs)
+
+install(DIRECTORY
+  include/
+  DESTINATION ${CMAKE_INSTALL_INCLUDEDIR}
+)
+
+# Install and export the usual library (little-endian)
 install(TARGETS botspeak
   EXPORT botspeak_targets
   LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR}
@@ -29,9 +46,23 @@ install(DIRECTORY
 
 install(EXPORT botspeak_targets
   FILE botspeakTargets.cmake
-  # NAMESPACE botspeak::
   DESTINATION ${CMAKE_INSTALL_LIBDIR}/cmake/botspeak
 )
+
+# Install and export the big-endian library
+install(TARGETS botspeak_be
+  EXPORT botspeak_be_targets
+  LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR}
+  ARCHIVE DESTINATION ${CMAKE_INSTALL_LIBDIR}
+  RUNTIME DESTINATION ${CMAKE_INSTALL_BINDIR}
+  INCLUDES DESTINATION ${CMAKE_INSTALL_INCLUDEDIR}
+)
+
+install(EXPORT botspeak_be_targets
+  FILE botspeak_beTargets.cmake
+  DESTINATION ${CMAKE_INSTALL_LIBDIR}/cmake/botspeak
+)
+
 
 include(CMakePackageConfigHelpers)
 
@@ -45,6 +76,7 @@ install(FILES
   DESTINATION ${CMAKE_INSTALL_LIBDIR}/cmake/botspeak
 )
 
+# Usual (little-endian) test
 add_executable(test_frame_ops
   test/test_frame_ops.c
 )
@@ -55,18 +87,29 @@ install(TARGETS
   RUNTIME DESTINATION bin
 )
 
+# Big-endian test
+add_executable(test_frame_ops_be
+  test/test_frame_ops_be.c
+)
+target_link_libraries(test_frame_ops_be botspeak_be)
+
+install(TARGETS
+  test_frame_ops_be
+  RUNTIME DESTINATION bin
+)
+
+# Optional test
 if(TESTING)
+  find_package(PkgConfig REQUIRED)
+  pkg_check_modules(Serial REQUIRED IMPORTED_TARGET libserial)
 
   add_executable(test_real_world
     test/test_real_world.cpp
   )
   target_link_libraries(test_real_world botspeak PkgConfig::Serial)
 
-  find_package(PkgConfig REQUIRED)
-  pkg_check_modules(Serial REQUIRED IMPORTED_TARGET libserial)
   install(TARGETS
       test_real_world
       RUNTIME DESTINATION bin
   )
-
 endif()
