--- a/Config.cmake.in
+++ b/Config.cmake.in
@@ -1,5 +1,6 @@
 @PACKAGE_INIT@
 
 include("${CMAKE_CURRENT_LIST_DIR}/botspeakTargets.cmake")
+include("${CMAKE_CURRENT_LIST_DIR}/botspeak_beTargets.cmake")
 
 check_required_components(botspeak)
