--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -8,7 +8,7 @@
 
 	// Add USB device
 	"runArgs": [
-		"--device", "/dev/int-brain-xxxxxxxxxxxx"
+		// "--device", "/dev/int-brain-xxxxxxxxxxxx"
 	]
 
 	// Features to add to the dev container. More info: https://containers.dev/features.
